--- a/block-BNaadl/blog/public/stylesheets/style.css
+++ b/block-BNaadl/blog/public/stylesheets/style.css
@@ -3,6 +3,194 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+* {
+  box-sizing: border-box;
+}
 a {
-  color: #00B7FF;
+  color: #ffffff;
+  text-decoration: none;
+}
+p {
+  color: blue;
+}
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+header {
+  padding: 2rem 0;
+  background-color: rgb(83, 68, 60);
+}
+h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+.center {
+  margin-left: 37rem;
+  margin-top: 2rem;
+}
+.btn {
+  background-color: rgb(16, 83, 16);
+  border: 0;
+  padding: 0.8rem 0.8rem;
+  border-radius: 3px;
+}
+form {
+  margin: 3rem auto;
+  text-align: center;
+}
+input {
+  display: block;
+  margin-left: 340px;
+  width: 47%;
+  height: 30px;
+}
+textarea {
+  width: 47%;
+}
+h5 {
+  color: black;
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.7rem;
+}
+h6 {
+  color: black;
+  text-align: center;
+  margin-top: 1rem;
 }
