--- a/block-BNaadl/blog/views/index.ejs
+++ b/block-BNaadl/blog/views/index.ejs
@@ -8,7 +8,7 @@
     <div>
       <header class="">
         <div class="container flex">
-          <a href="/"> Home </a>
+          <a class="home" href="/"> Home </a>
           <span>
             <button class="btn">
               <a href="/articles/new"> Add Article </a>
@@ -18,7 +18,7 @@
       </header>
       <main>
         <div>
-          <h2>Blog App</h2>
+          <h2 class="text">Blog App</h2>
         </div>
         <button class="btn center">
           <a href="/articles"> Go to Articles </a>
