--- a/block-BNaadl/blog/views/editArticleForm.ejs
+++ b/block-BNaadl/blog/views/editArticleForm.ejs
@@ -10,7 +10,7 @@
   <body>
     <header class="">
       <div class="container flex">
-        <a href="/"> Home </a>
+        <a class="home" href="/"> Home </a>
         <span>
           <button class="btn">
             <a href="#"> Add Article </a>
